force-app/main/default/objects/SA_Citizen__c/SA_Citizen__c.object-meta.xml
<CustomObject>
    <label>SA Citizen</label>
    <nameField>
        <displayFormat>SA-{00000000}</displayFormat>
        <label>SA Citizen Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>SA Citizens</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>