force-app/main/default/objects/SA_Citizen__c/fields/Counter__c.field-meta.xml
<CustomField>
    <fullName>Counter__c</fullName>
    <defaultValue>0</defaultValue>
    <description>Counter to Count number of Searches</description>
    <inlineHelpText>Counter to Count number of Searches</inlineHelpText>
    <label>Counter</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>