force-app/main/default/objects/SA_Citizen__c/fields/Date_Of_Birth__c.field-meta.xml
<CustomField>
    <fullName>Date_Of_Birth__c</fullName>
    <description>Assuming the Date of Birth is will be passed by 19 Century.</description>
    <formula>DATEVALUE(&quot;19&quot;&amp;MID(TEXT( SA_Id_Number__c ),1,2)&amp;&quot;-&quot;&amp; MID(TEXT(SA_Id_Number__c),3,2)&amp;&quot;-&quot;&amp; MID(TEXT(SA_Id_Number__c),5,2))</formula>
    <inlineHelpText>Date Of Birth</inlineHelpText>
    <label>Date Of Birth</label>
    <type>Date</type>
</CustomField>