force-app/main/default/objects/SA_Citizen__c/fields/Gender__c.field-meta.xml
<CustomField>
    <fullName>Gender__c</fullName>
    <description>Gender of the Citizen</description>
    <formula>IF( VALUE(MID(TEXT(SA_Id_Number__c), 7, 4))  &gt;= 5000  , &apos;Male&apos;, &apos;Female&apos;)</formula>
    <inlineHelpText>Gender</inlineHelpText>
    <label>Gender</label>
    <type>Text</type>
</CustomField>