force-app/main/default/objects/SA_Citizen__c/fields/Is_Citizen__c.field-meta.xml
<CustomField>
    <fullName>Is_Citizen__c</fullName>
    <description>To Determine whether the Id user is Citizen or Permanent Resident</description>
    <formula>IF( MID(  TEXT(SA_Id_Number__c), 11, 1)  =  &apos;0&apos; , &apos;SA Citizen&apos;, &apos;Permanent Resident&apos;)</formula>
    <inlineHelpText>SA Citizen or Permanent Resident</inlineHelpText>
    <label>Is Citizen</label>
    <type>Text</type>
</CustomField>