force-app/main/default/objects/SA_Citizen__c/fields/SA_Id_Number__c.field-meta.xml
<CustomField>
    <fullName>SA_Id_Number__c</fullName>
    <description>Stores the Information related to South African Id Number</description>
    <inlineHelpText>South African Id</inlineHelpText>
    <label>SA Id Number</label>
    <precision>13</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Number</type>
    <unique>true</unique>
</CustomField>